--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "8.4.47",
+    "prisma": "^6.13.0",
     "tailwindcss": "3.4.10"
   }
 }
