--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@splinetool/viewer": "^1.10.44",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.2.0",
     "clsx": "2.1.1",
     "lucide-react": "0.439.0",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recharts": "2.12.7"
+    "recharts": "2.12.7",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
