--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "@splinetool/viewer": "^1.10.44",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "2.12.7",
+    "three": "^0.179.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
