--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/viewer": "^1.10.44",
+    "@supabase/supabase-js": "^2.55.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "clsx": "2.1.1",
