--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/viewer": "^1.10.44",
     "@supabase/supabase-js": "^2.55.0",
