--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "recharts": "2.12.7",
     "resend": "^6.0.1",
     "three": "^0.179.1",
