--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/viewer": "^1.10.44",
-    "@supabase/supabase-js": "^2.55.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.57.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
     "next": "14.2.5",
     "nodemailer": "^7.0.5",
@@ -24,6 +30,8 @@
     "react-phone-input-2": "^2.15.1",
     "recharts": "2.12.7",
     "resend": "^6.0.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.179.1",
     "zod": "^4.0.17"
   },
