--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,17 @@
+// {
+//     "compilerOptions": {
+//       "baseUrl": ".",
+//       "paths": {
+//         "@/*": ["*"]
+//       }
+//     }
+//   }
+
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/*": ["*"]
-      }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["app/*"]
     }
   }
-
-  
+}
