--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,7 +11,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["app/*"]
+      "@/*": ["app/*"],
+      "@lib/*": ["lib/*"]
     }
   }
 }
